# RA-Companion

./: .gitignore  API_RETROACHIEVEMENTS.md  CHECKLIST.md  FONCTIONNALITES-1.0.3.txt  INSTRUCTION.md  Prepare-Release.ps1  RA.Compagnon.sln  README.md  RELEASE_CHECKLIST.md  RULES.md  Repair-Update-1.0.3-to-1.0.4.ps1  Repair-Update.ps1  TODO-Fonctionnalites.md  TODO-Validation-release.md  TODO.emulateurs.md  TODO.fonctionnalites.md  TODO.md  TODO.problemes_importants.md  VERSION.md  build.cmd  build.ps1  run-tests.ps1  update.json
.github/workflows/: sync-update-manifest.yml
RA.Compagnon/: App.xaml  App.xaml.cs  AssemblyInfo.cs  ConstantesDesign.cs  MainWindow.Account.cs  MainWindow.Animations.cs  MainWindow.AppUpdate.cs  MainWindow.Context.cs  MainWindow.CurrentSuccess.cs  MainWindow.DebugTests.cs  MainWindow.Diagnostics.cs  MainWindow.Display.cs  MainWindow.FlycastPolling.cs  MainWindow.GameDetails.cs  MainWindow.GameLoading.cs  MainWindow.GameVisuals.cs  MainWindow.Images.cs  MainWindow.Layout.cs  MainWindow.LoadPipeline.cs  MainWindow.LocalGame.cs  MainWindow.LocalProbe.cs  MainWindow.Modules.cs  MainWindow.Obs.cs  MainWindow.Orchestrator.cs  MainWindow.Persistence.cs  MainWindow.Responsive.cs  MainWindow.ResponsiveText.cs  MainWindow.Shutdown.cs  MainWindow.Startup.cs  MainWindow.SuccesGrid.cs  MainWindow.SuccessListState.cs  MainWindow.Timers.cs  MainWindow.ViewModel.cs  MainWindow.WindowShell.cs  MainWindow.xaml  MainWindow.xaml.cs  RA.Compagnon.csproj
RA.Compagnon.Tests/: Program.cs  RA.Compagnon.Tests.csproj
RA.Compagnon/ObsOverlay/: index.html  normalize.css  normalize.scss  overlay.css  overlay.html  overlay.js  overlay.scss
RA.Compagnon/Services/: ClientRetroAchievements.cs  ServiceActiviteRetroAchievements.cs  ServiceAnalyseDescriptionsSucces.cs  ServiceCatalogueEmulateursLocaux.cs  ServiceCatalogueJeuxLocal.cs  ServiceCatalogueRetroAchievements.cs  ServiceCommunauteRetroAchievements.cs  ServiceConfigurationLocale.cs  ServiceDetectionSuccesJeu.cs  (+31 more)
native/ra_compagnon_rcheevos_bridge/: CMakeLists.txt  README.md  ra_compagnon_rcheevos_bridge.c  ra_compagnon_rcheevos_bridge.h
native/ra_compagnon_rcheevos_bridge/build-cmake/: CMakeCache.txt
native/ra_compagnon_rcheevos_bridge/build-msvc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  ra_compagnon_rcheevos_bridge.exp
(+140 files in other folders)
